--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
 <h1>Tropicali</h1>
+<P>tropicali is a new restaurant in the heart of Santa Fe, New Mexico. We serve casual fine dining Latin American cuisine with a little Southwestern twist. Ask us how to make your burrito “Christmas style”!</P>     
+<p>Site launching March</p>
